syntax = "proto3";

option go_package = ".;pb";
package pb;

message UserLoginRequest {
  string username = 1;
  string password = 2;
}

message UserLoginResponse {
  int32 statusCode = 1 [json_name="status_code"];
  string statusMsg = 2 [json_name="status_msg"];
  int64 userID = 3;
  string token = 4;
}

service UserService { rpc Login(UserLoginRequest) returns (UserLoginResponse); }